typo fix in the markdown text

--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -12,7 +12,7 @@
     "마감시간은 HiClass에 공지되어 있습니다.\n",
     "\n",
     "* 도형은 원, 직사각형(가로세로변은 항상 x축 y축과 평행), 직각삼각형(직각 꼭지점과 만나는 변들은 항상 x축 y축과 평행) 이 세가지밖에 없다는 가정하고 도형의 성질을 이용해도 됩니다. 예를 들면 충돌검사를 위한 코드를 작성해 나가면서 \"직사각형도 직삼각형도 아닌 것 같으니 네놈은 원이 분명하구나!\"고 판단할 데이타가 생기면 원의 성질 등을 활용한다건가 하는 것.\n",
-    "* 하지만 아직 배우지 않은 Java의 업캐스팅 기능을 활용해 추상적 모양 변수를 구체적 모양 셋 중 하나의 값으로 형변환하는 것은 사용하지 않기로 합니다. (그러면 너무 좀 지나치게 싱겁게 끝나버리니 ...)  \n",
+    "* 하지만 아직 배우지 않은 Java의 `instanceof` 연산자나 다운캐스팅 기능을 활용해 추상적 모양 변수를 구체적 모양 셋 중 하나의 값으로 형변환하는 것은 사용하지 않기로 합니다. (그러면 너무 좀 지나치게 싱겁게 끝나버리니 ...)  \n",
     "* 이 수업은 수학 기하학 과목도 아니고 최적의 알고리듬을 찾는 과목도 아니기 때문에 컴퓨터의 연산능력에 어느정도 의존해 조금 무식하게 접근하더라도 논리에 맞고 답만 정확하면 감점한다던가 그러지는 않습니다. 물론 수학적 원리나 좋은 알고리듬으로 완성도를 높이고 싶은 것은 개인적인 만족과 자기발전에 도움이 되니까 여유가 있는 분들은 그런 방면으로 노력해도 되고요.\n",
     "* 하지만 그렇다고 너무 무식하게 하면 감점을 하지 않을 수 없겠죠. 예를 들면 500x800 직사각형의 충돌검사를 위해 `for (int i=0; i<500; ++i) { for (int j=0; j<800; ++j) { ... } }` 이렇게 돌리겠다면 양심적으로 좀 너무 무리수겠죠."
    ]
@@ -25,7 +25,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr5f163133.RGB"
+       "com.twosigma.beaker.javash.bkrb9637b9f.RGB"
       ]
      },
      "execution_count": 1,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr5f163133.Point"
+       "com.twosigma.beaker.javash.bkrb9637b9f.Point"
       ]
      },
      "execution_count": 4,
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,10 +132,10 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr5f163133.Point@21c36e9f"
+       "com.twosigma.beaker.javash.bkrb9637b9f.Point@2c8eea02"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr5f163133.Point@7737cc8f"
+       "com.twosigma.beaker.javash.bkrb9637b9f.Point@39aa8c63"
       ]
      },
      "execution_count": 6,
@@ -186,7 +186,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr5f163133.ShapeObj"
+       "com.twosigma.beaker.javash.bkrb9637b9f.ShapeObj"
       ]
      },
      "execution_count": 7,
@@ -230,16 +230,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr5f163133.CircObj"
+       "com.twosigma.beaker.javash.bkrb9637b9f.CircObj"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "830902c0-ddce-4034-924a-13a550ed1a84",
+       "model_id": "8a9e112d-9f5c-4409-923f-5bcce8b98b4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -361,7 +361,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8261958f-32b6-403e-94af-a6c2a0894c18",
+       "model_id": "cd7649c4-cd4d-42f4-98f0-a143f50aeda0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -413,9 +413,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr5f163133.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr5f163133.ShapeObj\u001b[0;0m",
-      "\u001b[0;31m class RectObj extends ShapeObj {  int w;  int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                  ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkrb9637b9f.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkrb9637b9f.ShapeObj\u001b[0;0m",
+      "\u001b[0;31m class RectObj extends ShapeObj { int w; int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                ^ \u001b[0;0m"
      ]
     }
    ],
@@ -442,7 +442,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c902742-049b-407e-9b77-25518a4f4445",
+       "model_id": "7defb80b-4836-419d-999b-8da51a4177c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -478,9 +478,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr5f163133.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr5f163133.ShapeObj\u001b[0;0m",
-      "\u001b[0;31m class RTriObj extends ShapeObj {  int w;  int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                  ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkrb9637b9f.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkrb9637b9f.ShapeObj\u001b[0;0m",
+      "\u001b[0;31m class RTriObj extends ShapeObj { int w; int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                ^ \u001b[0;0m"
      ]
     }
    ],
@@ -525,7 +525,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr5f163133.Shape"
+       "com.twosigma.beaker.javash.bkrb9637b9f.Shape"
       ]
      },
      "execution_count": 14,
@@ -563,7 +563,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr5f163133.Circle"
+       "com.twosigma.beaker.javash.bkrb9637b9f.Circle"
       ]
      },
      "execution_count": 15,
@@ -617,7 +617,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8583eae-5367-42cf-a440-3b9a84704eca",
+       "model_id": "3a2c21bb-6bac-423b-99c2-d3e3f62f1317",
        "version_major": 2,
        "version_minor": 0
       },
@@ -681,9 +681,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr5f163133.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr5f163133.Point,com.twosigma.beaker.javash.bkr5f163133.Obj) in com.twosigma.beaker.javash.bkr5f163133.Shape\u001b[0;0m",
-      "\u001b[0;31m class Rectangle extends Shape {  int w;  int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                 ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkrb9637b9f.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkrb9637b9f.Point,com.twosigma.beaker.javash.bkrb9637b9f.Obj) in com.twosigma.beaker.javash.bkrb9637b9f.Shape\u001b[0;0m",
+      "\u001b[0;31m class Rectangle extends Shape { int w; int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                               ^ \u001b[0;0m"
      ]
     }
    ],
@@ -706,9 +706,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr5f163133.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr5f163133.Point,com.twosigma.beaker.javash.bkr5f163133.Obj) in com.twosigma.beaker.javash.bkr5f163133.Shape\u001b[0;0m",
-      "\u001b[0;31m class RTriangle extends Shape { int w;  int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkrb9637b9f.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkrb9637b9f.Point,com.twosigma.beaker.javash.bkrb9637b9f.Obj) in com.twosigma.beaker.javash.bkrb9637b9f.Shape\u001b[0;0m",
+      "\u001b[0;31m class RTriangle extends Shape { int w; int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                               ^ \u001b[0;0m"
      ]
     }
    ],
@@ -741,7 +741,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "11.0.1"
+   "version": "11.0.3"
   },
   "toc": {
    "base_numbering": 1,
@@ -995,6 +995,35 @@
        "visible": true
       }
      },
+     "250febc8-dd0c-4674-b09b-17ae296062d7": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
      "2aaeb27a-2833-44f0-a6f4-b00578af0c3e": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
@@ -1130,6 +1159,26 @@
        "msg_throttle": 3,
        "placeholder": "",
        "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg></div>",
+       "visible": true
+      }
+     },
+     "3a2c21bb-6bac-423b-99c2-d3e3f62f1317": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_250febc8-dd0c-4674-b09b-17ae296062d7",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div><div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='50' style='stroke:black; stroke-width:1; fill:rgb(255,0,255); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='50' style='stroke:black; stroke-width:1; fill:rgb(255,0,255); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
        "visible": true
       }
      },
@@ -1387,6 +1436,35 @@
        "visible": true
       }
      },
+     "66b28acd-d9a0-4369-baa8-8d3f90a07f15": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
      "6931e27d-3e2c-4dc6-babf-a1679436d999": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
@@ -1592,6 +1670,26 @@
        "visible": true
       }
      },
+     "7defb80b-4836-419d-999b-8da51a4177c8": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_66b28acd-d9a0-4369-baa8-8d3f90a07f15",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<svg width='300' height='300' style='border:solid 1px'><rect x='100' y='70' width='40' height='100' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg>",
+       "visible": true
+      }
+     },
      "8011cb78-ed5e-46b0-a7b4-054db0ba9a09": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "*",
@@ -1668,6 +1766,26 @@
        "padding": "",
        "right": "",
        "top": ""
+      }
+     },
+     "8a9e112d-9f5c-4409-923f-5bcce8b98b4a": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_a64c5a9b-16d6-4690-b5ae-ce7ef7e8e8d0",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg></div>",
+       "visible": true
       }
      },
      "93f335db-1aa7-42fe-aea7-480a1cdb2309": {
@@ -1789,6 +1907,35 @@
       }
      },
      "a362bef7-7e44-4204-88e0-e602024bdb36": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
+     "a64c5a9b-16d6-4690-b5ae-ce7ef7e8e8d0": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
       "model_name": "LayoutModel",
@@ -2183,6 +2330,26 @@
        "font_style": "",
        "font_weight": "",
        "layout": "IPY_MODEL_a362bef7-7e44-4204-88e0-e602024bdb36",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
+       "visible": true
+      }
+     },
+     "cd7649c4-cd4d-42f4-98f0-a143f50aeda0": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_f2014a50-15a1-47bf-a6d4-cda2b34522d6",
        "msg_throttle": 3,
        "placeholder": "",
        "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
@@ -2593,6 +2760,35 @@
       }
      },
      "f1ff1b54-a651-4a83-9515-198cf16aa076": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
+     "f2014a50-15a1-47bf-a6d4-cda2b34522d6": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
       "model_name": "LayoutModel",
