--- a/Lect08.ipynb
+++ b/Lect08.ipynb
@@ -9,6 +9,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "hello\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "String str1 = new String(\"hello\");\n",
+    "String str2 = new String(str1);\n",
+    "System.out.println(str1);\n",
+    "System.out.println(str2);\n",
+    "\n",
+    "// return str1 == str2; // false\n",
+    "return str1.equals(str2); // true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkre690acd5.Point"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Point {\n",
+    "    int x, y;\n",
+    "    Point() { x=0; y=0; }\n",
+    "    Point(int x, int y) { this.x=x; this.y=y; }\n",
+    "    @Override\n",
+    "    public String toString() { return \"(\"+x+\",\"+y+\")\"; }\n",
+    "    // @Override 아니다   이거는 오버로딩이다\n",
+    "    public boolean equals(Point _p) { return x==_p.x && y==_p.y; }\n",
+    "    // 똑같은 기능을 하는데 오버라이딩으로 만들어 쓰는 방법도 있다 (instanceof 연산자, 다운캐스팅 사용)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1,2)\n",
+      "(1,2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Point p1 = new Point(1,2);\n",
+    "Point p2 = new Point(1,2);\n",
+    "System.out.println(p1);\n",
+    "System.out.println(p2);\n",
+    "\n",
+    "// return p1==p2; // false\n",
+    "\n",
+    "// 위에서 오버로딩된 boolean equals(Point _p) 가 없으면 아래 결과도 false다.\n",
+    "// 왜 어째서??? Object의 boolean equals(Object o) { return this==o; }\n",
+    "return p1.equals(p2); "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
