--- a/Lect08.ipynb
+++ b/Lect08.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "true"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkre690acd5.Point"
+       "com.twosigma.beaker.javash.bkrb8c4919b.Point"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,15 +64,17 @@
     "    Point(int x, int y) { this.x=x; this.y=y; }\n",
     "    @Override\n",
     "    public String toString() { return \"(\"+x+\",\"+y+\")\"; }\n",
-    "    // @Override 아니다   이거는 오버로딩이다\n",
-    "    public boolean equals(Point _p) { return x==_p.x && y==_p.y; }\n",
+    "    // @Override // 아니다   이거는 오버로딩이다\n",
+    "    public boolean equals(Point _p) {\n",
+    "        return x==_p.x && y==_p.y;\n",
+    "    }\n",
     "    // 똑같은 기능을 하는데 오버라이딩으로 만들어 쓰는 방법도 있다 (instanceof 연산자, 다운캐스팅 사용)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +82,9 @@
      "output_type": "stream",
      "text": [
       "(1,2)\n",
-      "(1,2)\n"
+      "(1,2)\n",
+      "true\n",
+      "false\n"
      ]
     },
     {
@@ -89,7 +93,7 @@
        "true"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,6 +103,13 @@
     "Point p2 = new Point(1,2);\n",
     "System.out.println(p1);\n",
     "System.out.println(p2);\n",
+    "\n",
+    "String s1 = new String(\"hello\");\n",
+    "\n",
+    "// Point클래스의 equals(Point)\n",
+    "System.out.println(p1.equals(p2));\n",
+    "// Object클래스의 equals(Object)\n",
+    "System.out.println(p1.equals(s1)); \n",
     "\n",
     "// return p1==p2; // false\n",
     "\n",
