--- a/Lect08.ipynb
+++ b/Lect08.ipynb
@@ -43,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrb8c4919b.Point"
+       "com.twosigma.beaker.javash.bkra908764a.Point"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,10 +65,9 @@
     "    @Override\n",
     "    public String toString() { return \"(\"+x+\",\"+y+\")\"; }\n",
     "    // @Override // 아니다   이거는 오버로딩이다\n",
-    "    public boolean equals(Point _p) {\n",
-    "        return x==_p.x && y==_p.y;\n",
-    "    }\n",
+    "    public boolean equals(Point _p) { return x==_p.x && y==_p.y; }\n",
     "    // 똑같은 기능을 하는데 오버라이딩으로 만들어 쓰는 방법도 있다 (instanceof 연산자, 다운캐스팅 사용)\n",
+    "    // 실제로 String클래스의 경우는 오버라이딩으로 만들어 쓰고 있다는 것을 API 검색을 해보면 알 수 있다\n",
     "}"
    ]
   },
