--- a/Lect04.ipynb
+++ b/Lect04.ipynb
@@ -4,6 +4,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 이차원 배열"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int arr[] = {1,2,3,4}; // 일차원배열\n",
+    "int arr2[][] = {{1,2}, {3,4,5}, {6,7,8,9}}; //이차원\n",
+    "\n",
+    "for (int i=0; i<arr2.length; ++i) {\n",
+    "    for (int j=0; j<arr2[i].length; ++j) {\n",
+    "        System.out.println(arr2[i][j]);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// 초기화 나중에\n",
+    "int arr2[][] = new int[3][];\n",
+    "\n",
+    "// {{1,2}, {3,4,5}, {6,7,8,9}}; //이차원\n",
+    "\n",
+    "arr2[0] = new int[2];\n",
+    "arr2[0][0] = 1;\n",
+    "arr2[0][1] = 2;\n",
+    "arr2[1] = new int[3];\n",
+    "arr2[1][0] = 3;\n",
+    "arr2[1][1] = 4;\n",
+    "arr2[1][2] = 5;\n",
+    "arr2[2] = new int[4];\n",
+    "arr2[2][0] = 6;\n",
+    "arr2[2][1] = 7;\n",
+    "arr2[2][2] = 8;\n",
+    "arr2[2][3] = 9;\n",
+    "\n",
+    "for (int i=0; i<arr2.length; ++i) {\n",
+    "    for (int j=0; j<arr2[i].length; ++j) {\n",
+    "        System.out.println(arr2[i][j]);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 배열 초기화"
    ]
   },
