--- a/Lect08.ipynb
+++ b/Lect08.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 제네릭 Generic"
+    "# 43 제네릭 Generic"
    ]
   },
   {
@@ -19,7 +19,7 @@
     "그 후 C와 호환성이 높고 객체지향 프로그래밍을 지원하는 C++이 인기를 끌었으며 이를 시작으로 일부 객체지향 언어들이 인기를 끌며 \"주류\" 취급을 받는 시대가 열렸다.\n",
     "소위 주류 취급을 받게 된 언어들 중에는 최초로 \"쓰레기 수거\"(Garabe Collection)이라는 자동으로 메모 관리를 지원하는 언어로 등장한 것이 Java이다.\n",
     "또 그당시 Java의 저작권을 가졌던 선 마이크로시스템즈 사와의 분쟁 등의 이유로 마이크로소프트 사에서는 C++도 Java도 아닌 자신들만의 주류 언어인 C#을 만들게 되었다.\n",
-    "흥미로운 사실은 C++, Java, C#모두 언어가 처음 설계될 때는 템플릿(template) 또는 제너릭(generic)이라는 이름의 기능으로 언어에서 지원하는 인자다형성(parametric polymorphism)을 전혀 고려하지 않았다는 사실이다.\n",
+    "흥미로운 사실은 C++, Java, C#모두 언어가 처음 설계될 때는 템플릿(template) 또는 제네릭(generic)이라는 이름의 기능으로 언어에서 지원하는 인자다형성(parametric polymorphism)을 전혀 고려하지 않았다는 사실이다.\n",
     "참고로 당시 주류 객체지향 언어보다 역사가 오래된 다른 함수형 프로그래밍 언어들은 그 언어들을 설계할 때부터 인자다형성을 고려한 것들도 이미 여럿 있었다.\n",
     "단지 기계의 성능이 미치는 영향이 너무나 치명적이어서 효율에 집중할 수밖에 없었던 대부분의 현업 개발자들은 그러한 비주류 언어에 눈길을 줄 여유나 여건이 되지 않아 이러한 개념 자체가 생소한 경우가 대부분이었다.\n",
     "하드웨어는 어떤 영향력 있는 기업이 신기술을 제품 경쟁에서 성공시켜 버리면 헤게모니가 빠르게 전환되기도 한다.\n",
@@ -32,14 +32,280 @@
     "이러한 라이브러리를 설계하기 위하 당시로서는 C++에 커다란 변화인 template이라는 기능을 추가할 것을 요구했고\n",
     "STL이 점점 인기를 끌게 됨에 따라 C++ 표준에도 tempalte이 추가되었을 뿐 아니라 과게어 STL이라고 불렸던 라이브러리가\n",
     "지금은 C++ 표준라이브러리의 일부로 녹아들어 지금은 *C++ 표준 컨테이너*(C++ Standard Containres) 등이 되었다.\n",
-    "이는 Java와 C#에도 영향을 미쳐 Java와 C#에도 제너릭(generic)이라는 유사한 기능들이 비슷한 문법으로 추가되었다.\n",
+    "이는 Java와 C#에도 영향을 미쳐 Java와 C#에도 제너릭(generic)이라는 유사한 기능들이 비슷한 문법으로 추가되다\n",
+    "또한 Java에도 *자바 컬렉션 프레임워크*(Java Collections Foundation, JCF)라고 불리는 자료구조 라이브러리가 있는데 바로 이 JCF관련 내용에 대해서 다루는 것이 교과서 44장이다.\n",
+    "이러한 컬렉션 프레임워크를 사용하려면 기본적으로 Java에서 알아야 하는 개념이 제네릭(Generic)이다. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 순서쌍 - 제너릭을 설명하기 위한 간단한 예\n",
     "\n",
-    "\n"
+    "아래와 같이 타입이 다를 뿐 순서쌍이라는 특징은 똑같은 데이타 구조에 대해 반복해서 저렇게 서로 다른 순서쌍 클래스를 정의하는 것은 너무 바보같다.\n",
+    "\n",
+    "제네릭을 사용하면 이러한 반복을 없앨 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr6a5a5446.PairIntInt"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class PairIntInt {\n",
+    "    int first;\n",
+    "    int second;\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr6a5a5446.PairIntDouble"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class PairIntDouble {\n",
+    "    int first;\n",
+    "    double second;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr6a5a5446.PairDoubleDouble"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class PairDoubleDouble {\n",
+    "    double first;\n",
+    "    double second;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 아니 그럼 도대체 Java에 제네릭이 있기 전에는 어떻게 했단 말인가?\n",
+    "\n",
+    "최상위 클래스인 `Object`의 순서쌍을 만들면 아무 타입의 객체 두 개를 담을 수 있기 때문에 이러한 방식을 옛날 옛적에는 일반적인 자료구조 라이브러리를 만드는 데 활용하기도 했다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr6a5a5446.Pair"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Pair {\n",
+    "    Object first;\n",
+    "    Object second;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr6a5a5446.AAA"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class AAA { }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이러한 방식의 문제점은 정적 타입으로는 아무것도 구분되지 않기 때문에 아래와 같이 의도치 않게 다른 타입의 객체를 할당하는 실수를 해도 컴파일 에러가 나지 않는다.\n",
+    "\n",
+    "또한 꼭 이런 실수가 아니더라도 순서쌍 안에 할당한 값들을 다시 끄집어 내려면 `Object`로부터 다운캐스팅을 해야만 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pair sspair = new Pair();\n",
+    "sspair.first = new String(\"Hello\");\n",
+    "sspair.second = new String(\"World\");\n",
+    "\n",
+    "// .. ..\n",
+    "sspair.second = new AAA();\n",
+    "// .. .."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "반면 아래와 같이 제너릭으로 정의된 순서쌍은 의도치 않게 다른 객체를 할당하는 실수를 하면 컴파일 에러가 나서 금방 문제점을 알아차릴 수 있다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr6a5a5446.Pair"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Pair<A,B> {\n",
+    "    A first;\n",
+    "    B second;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Pair <int, int> sspair; // 자바는 이게안됨\n",
+    "Pair<Integer, Integer> iipair\n",
+    "  = new Pair<Integer, Integer>();\n",
+    "iipair.first = new Integer(3);\n",
+    "iipair.second = new Integer(4);\n",
+    "\n",
+    "\n",
+    "Pair<Double, Double> ddpair\n",
+    "  = new Pair<Double, Double>();\n",
+    "ddpair.first = new Double(3.0);\n",
+    "ddpair.second = new Double(4.4);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "incompatible types",
+     "evalue": " com.twosigma.beaker.javash.bkr6a5a5446.AAA cannot be converted to java.lang.String",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31mincompatible types: com.twosigma.beaker.javash.bkr6a5a5446.AAA cannot be converted to java.lang.String\u001b[0;0m",
+      "\u001b[0;31m sspair.second = new AAA()\u001b[0;0m",
+      "\u001b[0;31m                 ^        ^ \u001b[0;0m"
+     ]
+    }
+   ],
+   "source": [
+    "Pair<String, String> sspair\n",
+    "  = new Pair<String, String>();\n",
+    "sspair.first = new String(\"Hello\");\n",
+    "sspair.second = new String(\"World\");\n",
+    "\n",
+    "sspair.second = new AAA();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 아래는 오버로딩/오버라이딩 관련\n",
+    "\n",
+    "여기서부터는 나중에 다른 문서로 옮겨야 할듯"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +322,7 @@
        "true"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,16 +339,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkra908764a.Point"
+       "com.twosigma.beaker.javash.bkr6a5a5446.Point"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +388,7 @@
        "true"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,210 +411,6 @@
     "// 위에서 오버로딩된 boolean equals(Point _p) 가 없으면 아래 결과도 false다.\n",
     "// 왜 어째서??? Object의 boolean equals(Object o) { return this==o; }\n",
     "return p1.equals(p2); "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "com.twosigma.beaker.javash.bkra0253ba3.Pair"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class Pair {\n",
-    "    Object first;\n",
-    "    Object second;\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "com.twosigma.beaker.javash.bkra0253ba3.AAA"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class AAA { }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "null"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Pair sspair = new Pair();\n",
-    "sspair.first = new String(\"Hello\");\n",
-    "sspair.second = new String(\"World\");\n",
-    "\n",
-    "// .. ..\n",
-    "sspair.second = new AAA();\n",
-    "// .. .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "com.twosigma.beaker.javash.bkra0253ba3.Pair"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class Pair<A,B> {\n",
-    "    A first;\n",
-    "    B second;\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "null"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "// Pair <int, int> sspair; // 자바는 이게안됨\n",
-    "Pair<Integer, Integer> iipair\n",
-    "  = new Pair<Integer, Integer>();\n",
-    "iipair.first = new Integer(3);\n",
-    "iipair.second = new Integer(4);\n",
-    "\n",
-    "\n",
-    "Pair<Double, Double> ddpair\n",
-    "  = new Pair<Double, Double>();\n",
-    "ddpair.first = new Double(3.0);\n",
-    "ddpair.second = new Double(4.4);\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "incompatible types",
-     "evalue": " com.twosigma.beaker.javash.bkra0253ba3.AAA cannot be converted to java.lang.String",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31mincompatible types: com.twosigma.beaker.javash.bkra0253ba3.AAA cannot be converted to java.lang.String\u001b[0;0m",
-      "\u001b[0;31m sspair.second = new AAA()\u001b[0;0m",
-      "\u001b[0;31m                 ^        ^ \u001b[0;0m"
-     ]
-    }
-   ],
-   "source": [
-    "Pair<String, String> sspair\n",
-    "  = new Pair<String, String>();\n",
-    "sspair.first = new String(\"Hello\");\n",
-    "sspair.second = new String(\"World\");\n",
-    "\n",
-    "sspair.second = new AAA();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class PairIntInt {\n",
-    "    int first;\n",
-    "    int second;\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class PairIntDouble {\n",
-    "    int first;\n",
-    "    double second;\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class PairDoubleDouble {\n",
-    "    double first;\n",
-    "    double second;\n",
-    "}"
    ]
   }
  ],
